--- a/www/login.html
+++ b/www/login.html
@@ -2,111 +2,180 @@
 STOP LOOKING AT MY CODE YOU FUCKING NERD 😡
 -->
 
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Deep State HQ</title>
-    <link rel="stylesheet" href="/index.css">
+    <head>
+        <title>Deep State HQ</title>
+        <link rel="stylesheet" href="/index.css" />
 
-    <link rel="stylesheet" href="/common.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-</head>
+        <link rel="stylesheet" href="/common.css" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" />
+    </head>
 
-
-<body>
-
-    <!-- Banner is boilerplate, any changes should be applied to all pages -->
-    <div id="banner">
-        <div id="website-title"><a href="https://neoliber.al">Neoliberal</a></div>
-        <input id="menu-btn" type="checkbox">
-        <label id="menu-icon" for="menu-btn">
-            <span class="navicon"></span>
-        </label>
-        <ul id="menu">
-            <li>
-                <a class="submenu-name" href="/tools">Tools</a>
-                <input id="submenu-tools-btn" class="submenu-btn" type="checkbox">
-                <label class="submenu-icon" for="submenu-tools-btn">
-                    <span class="submenu-navicon"></span>
-                </label>
-                <ul class="submenu">
-                    <li><a href="/user_pinger_2">User Pinger 2</a></li>
-                    <li><a href="/dt">Discussion Thread</a></li>
-                    <li><a href="/political_quiz">Ideology Quiz</a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="submenu-name" href="/community">Community</a>
-                <input id="submenu-community-btn" class="submenu-btn" type="checkbox">
-                <label class="submenu-icon" for="submenu-community-btn">
-                    <span class="submenu-navicon"></span>
-                </label>
-                <ul class="submenu">
-                    <li><a href="https://cnliberalism.org">Center For New Liberalism</a></li>
-                    <li><a href="https://reddit.com/r/neoliberal">/r/neoliberal</a></li>
-                    <li><a href="https://github.com/neoliberal">Github</a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="submenu-name" href="/about">About</a>
-                <input id="submenu-about-btn" class="submenu-btn" type="checkbox">
-                <label class="submenu-icon" for="submenu-about-btn">
-                    <span class="submenu-navicon"></span>
-                </label>
-                <ul class="submenu">
-                    <li><a href="/about/privacy_policy.html">Privacy Policy</a></li>
-                    <li><a href="/about/settings.html">Settings</a></li>
-                    <li><a href="/about/contact.html">Contact</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
-    <!-- All individual webpage stuff should go in content -->
-    <div id="content">
-        <noscript>
-            <div id="noscript">This page requires Javascript to be enabled to function</div>
-        </noscript>
-        <h2>User Pinger Login</h2>
-        <hr>
-        <div>
-            <p>You can use this website to manage your subcriptions. Moderators can use this page to manage groups as well. To continue, please use the button below to sign into Reddit. This is only to verify your identity and does not allow the bot to take any actions on your behalf. Please see our <a href="/about/privacy_policy.html">Privacy Policy</a> for more information.</p>
-            <p>You can also view the past pings for a group on our <a href="./history.html">history page</a>.</p>
-        </div>
-        <div id="remember_me_inputs" style="display: flex; justify-content: center; font-weight: bold;">
-            <div>
-                <input type="checkbox" id="remember_me" onchange="remember_me(this)">
-                <label for="remember_me">Remember Me</label>
+    <body>
+        <!-- Banner is boilerplate, any changes should be applied to all pages -->
+        <div id="banner">
+            <div id="website-title">
+                <a href="https://neoliber.al">Neoliberal</a>
             </div>
+            <input id="menu-btn" type="checkbox" />
+            <label id="menu-icon" for="menu-btn">
+                <span class="navicon"></span>
+            </label>
+            <ul id="menu">
+                <li>
+                    <a class="submenu-name" href="/tools">Tools</a>
+                    <input
+                        id="submenu-tools-btn"
+                        class="submenu-btn"
+                        type="checkbox"
+                    />
+                    <label class="submenu-icon" for="submenu-tools-btn">
+                        <span class="submenu-navicon"></span>
+                    </label>
+                    <ul class="submenu">
+                        <li><a href="/user_pinger_2">User Pinger 2</a></li>
+                        <li><a href="/dt">Discussion Thread</a></li>
+                        <li><a href="/political_quiz">Ideology Quiz</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="submenu-name" href="/community">Community</a>
+                    <input
+                        id="submenu-community-btn"
+                        class="submenu-btn"
+                        type="checkbox"
+                    />
+                    <label class="submenu-icon" for="submenu-community-btn">
+                        <span class="submenu-navicon"></span>
+                    </label>
+                    <ul class="submenu">
+                        <li>
+                            <a href="https://cnliberalism.org"
+                                >Center For New Liberalism</a
+                            >
+                        </li>
+                        <li>
+                            <a href="https://reddit.com/r/neoliberal"
+                                >/r/neoliberal</a
+                            >
+                        </li>
+                        <li>
+                            <a href="https://github.com/neoliberal">Github</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="submenu-name" href="/about">About</a>
+                    <input
+                        id="submenu-about-btn"
+                        class="submenu-btn"
+                        type="checkbox"
+                    />
+                    <label class="submenu-icon" for="submenu-about-btn">
+                        <span class="submenu-navicon"></span>
+                    </label>
+                    <ul class="submenu">
+                        <li>
+                            <a href="/about/privacy_policy.html"
+                                >Privacy Policy</a
+                            >
+                        </li>
+                        <li><a href="/about/settings.html">Settings</a></li>
+                        <li><a href="/about/contact.html">Contact</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-        <div id="links">
-            <a href="https://www.reddit.com/api/v1/authorize?client_id=6Hf-o8F1vhYWzMTwUB7Szg&response_type=token&state=siu4jcD&redirect_uri=https://neoliber.al/user_pinger_2/&duration=temporary&scope=identity">
-                <button>Log in to User Pinger 2</button>
-            </a>
-        </div>
-        <script>
-            document.getElementById("remember_me").checked = false;
-            document.cookie = "user_pinger_2_remember_me = ; SameSite=Strict; Secure";
-            document.cookie = "access_token = ; SameSite=Strict; Secure";
-            function remember_me(checkbox) {
-                if (checkbox.checked){
-                    document.cookie = "user_pinger_2_remember_me = true; SameSite=Strict; Secure";
-                } else {
-                    document.cookie = "user_pinger_2_remember_me = false; SameSite=Strict; Secure";
-                    document.cookie = "access_token = ";
+
+        <!-- All individual webpage stuff should go in content -->
+        <div id="content">
+            <noscript>
+                <div id="noscript">
+                    This page requires Javascript to be enabled to function
+                </div>
+            </noscript>
+            <h2>User Pinger Login</h2>
+            <hr />
+            <div>
+                <p>
+                    You can use this website to manage your subcriptions.
+                    Moderators can use this page to manage groups as well. To
+                    continue, please use the button below to sign into Reddit.
+                    This is only to verify your identity and does not allow the
+                    bot to take any actions on your behalf. Please see our
+                    <a href="/about/privacy_policy.html">Privacy Policy</a> for
+                    more information.
+                </p>
+                <p>
+                    You can also view the past pings for a group on our
+                    <a href="./history.html">history page</a>.
+                </p>
+            </div>
+            <div
+                id="remember_me_inputs"
+                style="
+                    display: flex;
+                    justify-content: center;
+                    font-weight: bold;
+                "
+            >
+                <div>
+                    <input
+                        type="checkbox"
+                        id="remember_me"
+                        onchange="remember_me(this)"
+                    />
+                    <label for="remember_me">Remember Me</label>
+                </div>
+            </div>
+            <div id="links">
+                <a
+                    href="https://www.reddit.com/api/v1/authorize?client_id=zZcOSXuEF9gtNjNdRrVapw&response_type=token&state=siu4jcD&redirect_uri=https://liberalchadash.club/&duration=temporary&scope=identity"
+                >
+                    <button>Log in to User Pinger 2</button>
+                </a>
+            </div>
+            <script>
+                document.getElementById("remember_me").checked = false;
+                document.cookie =
+                    "user_pinger_2_remember_me = ; SameSite=Strict; Secure";
+                document.cookie = "access_token = ; SameSite=Strict; Secure";
+                function remember_me(checkbox) {
+                    if (checkbox.checked) {
+                        document.cookie =
+                            "user_pinger_2_remember_me = true; SameSite=Strict; Secure";
+                    } else {
+                        document.cookie =
+                            "user_pinger_2_remember_me = false; SameSite=Strict; Secure";
+                        document.cookie = "access_token = ";
+                    }
                 }
-            }
-        </script>
-    </div>
+            </script>
+        </div>
 
-    <!-- Footer is boilerplate, any changes should be applied to all pages -->
-    <div id="footer">
-        created by <a href="https://reddit.com/user/jenbanim">/u/jenbanim</a>
-    </div>
-
-</body>
+        <!-- Footer is boilerplate, any changes should be applied to all pages -->
+        <div id="footer">
+            created by
+            <a href="https://reddit.com/user/jenbanim">/u/jenbanim</a>
+        </div>
+    </body>
+</html>
